modified article.html, style.css, index.html

--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<div class="main-content">
-
-  <body>
+<body>
+  <div class="main-content">
     <a class="logo" href="https://skillbox.ru/" target="_blank">
       <img src="./img/logo-light.png" alt="Логотип">
     </a>
     <div class="link">
-      <a class="module" href="#">Modules</a>
+      <a href="#">Modules</a>
       <a href="article.html">Indents</a>
     </div>
     <a download href="skillbox.docx">Скачать программу</a>
-  </body>
-</div>
+  </div>
+</body>
 
 </html>
