--- a/article.html
+++ b/article.html
@@ -9,65 +9,68 @@
   <title>Организация отступов в верстке</title>
 </head>
 
-<div class="container">
 
-  <body>
-    <h1>
+
+<body>
+  <div class="container">
+    <h1 class="h1">
       <b>Правила организации отступов: как сделать вёрстку гибкой и не допустить ошибок</b>
     </h1>
-    <p>
+    <p class="par">
       Вёрстка должна быть <b>максимально гибкой</b>. Даже если заказчик или работодатель говорит, что сайт
       статичный и не будет меняться, всё равно стоит делать так, будто завтра добавят несколько блоков текста, несколько
       элементов или что-то ещё.
     </p>
-    <p>
+    <p class="par">
       Нужно точно знать, <i>как поведут себя блоки при вёрстке, что произойдёт при изменениях</i>. И здесь помогают
       правила организации отступов. Они позволяют легко менять, улучшать и масштабировать вёрстку и уберегут вас от
       типичных ошибок.
     </p>
 
     <div class="grey-block">
-      <h2>
+      <h2 class="h2">
         Содержание
       </h2>
-      <p>
+      <p class="par">
         Первая из частей - HTML. Это начальная стадия соблюдения кодстайла, ведь любой сайт вы начинаете писать именно с
         этого языка. Давайте посмотрим на основные правила:
       </p>
-      <ul>
-        <li>
+      <ul class="ul">
+        <li class="li">
           <a href="#chapter1">Основные принципы работы с отступами</a>
         </li>
-        <li>
+        <li class="li">
           <a href="#chapter2">Первый принцип: отступы от предыдущего к следующему</a>
         </li>
-        <li>
+        <li class="li">
           <a href="#chapter3">Второй принцип: отступы задаются только между соседями</a>
         </li>
-        <li>
+        <li class="li">
           <a href="#chapter4">Третий принцип: у последнего элемента группы обнуляем отступ</a>
         </li>
       </ul>
     </div>
 
     <div id="chapter1">
-      <h3>
+      <h3 class="h3">
         Основные принципы работы с отступами
       </h3>
-      <p>
+      <p class="par">
         У любого сайта или документа есть так называемый поток — порядок вывода объектов в документе. В вёрстке этот
         поток
         идёт сверху вниз, слева направо. Именно поэтому, если какой-то элемент на макете находится справа, он должен в
         HTML-коде идти последним из своей группы.
       </p>
-      <p>Исходя из этого, можно сразу сформулировать первый принцип.</p>
+      <p class="par">
+        Исходя из этого, можно сразу сформулировать первый принцип.
+      </p>
     </div>
 
     <div id="chapter2">
-      <h3>
+      <h3 class="h3">
         Отступы задаются от предыдущего элемента к следующему
       </h3>
-      <p>
+      <p class="par">
         Это значит, что в вёрстке нужно стараться использовать CSS-свойства <b>margin-right</b>margin-right и
         <b>margin-bottom</b>, то есть отступ справа и отступ снизу. Проще говоря - избегаем отступов слева и
         сверху полностью.
@@ -79,26 +82,28 @@
         </figcaption>
       </figure>
 
-      <p>
+      <p class="par">
         Внешние отступы сверху и слева <b>(margin-top и margin-left)</b> заменяются на аналогичные внутренние
         отступы <b>(padding)</b> у родителя элементов.
       </p>
       <img class="not-figure" src="img/2.jpg" alt="Картинка №2">
-      <p>
+      <p class="par">
         Получается, что блок не может сдвигаться благодаря своим отступам, — он делает это только за счёт соседних
         элементов (и сам двигает соседние).
       </p>
     </div>
 
     <div id="chapter3">
-      <h3>Отступы задаются только между соседними элементами в потоке</h3>
-      <p>
+      <h3 class="h3">
+        Отступы задаются только между соседними элементами в потоке
+      </h3>
+      <p class="par">
         Если у блока нет соседа с левой стороны — задавать ему отступ слева нельзя. То же самое касается любой из
         сторон.
       </p>
 
       <img class="not-figure" src="img/3.jpg" alt="Картинка №3">
-      <p>
+      <p class="par">
         У обоих задан отступ снизу. Для первого списка это применимо, потому что есть сосед снизу — второй список. А для
         второго, не имеющего такого соседа, — отступа нет.
       </p>
@@ -113,21 +118,21 @@
     </div>
 
     <div id="chapter4">
-      <h3>
+      <h3 class="h3">
         Последнему элементу группы нужно обнулять отступ
       </h3>
-      <p>
+      <p class="par">
         Это легко сделать с помощью псевдоклассов в CSS. Например, есть псевдокласс <strong>:last-child</strong>,
         который
         позволяет выбрать последний элемент из группы (например, как в нашем случае: мы найдём последний элемент
         списка).
       </p>
-      <p>
+      <p class="par">
         С помощью <strong>:last-child</strong> мы обнуляем отступ у последнего <strong>ul</strong>, как показано в
         примере. Теперь всё работает как надо.
       </p>
       <img class="not-figure" src="img/5.jpg" alt="Картинка №5">
-      <p>
+      <p class="par">
         Чтобы не создавать два селектора, можно написать короче, используя псевдокласс <strong>:not</strong>. Тут мы
         буквально говорим следующее: «Задай отступ всем ul, но не последнему».
       </p>
@@ -135,33 +140,34 @@
       <img class="not-figure" src="img/6.jpg" alt="Картинка №6">
     </div>
 
-    <h3>
+    <h3 class="h3">
       Типичный пример: отступы в карточке
     </h3>
-    <p>
+    <p class="par">
       Рассмотрим типичный пример — реализацию карточки с контентом на сайте. Как здесь лучше поступить?
     </p>
-    <p>
+    <p class="par">
       В нашем примере самая простая карточка: с картинкой, заголовком и описанием. Как правильнее сделать отступы у
       заголовка и описания? На самом деле, всё очень просто: нужно применить принципы, о которых я рассказал.
     </p>
     <img class="not-figure" src="img/7.jpg" alt="Картинка №7">
-    <p>
+    <p class="par">
       Нам достаточно обернуть весь текст карточки в блок и задать блоку внутренний отступ — padding. Так наша вёрстка
       будет соответствовать сразу трём принципам. А чтобы сделать отступ между заголовком и описанием, достаточно просто
       сделать отступ снизу — для заголовка.
     </p>
     <div class="grey-block">
-      <h2>Итог</h2>
-      <p>
+      <h2 class="h2">
+        Итог
+      </h2>
+      <p class="par">
         Это основные правила организации отступов, которые помогут вам сделать вёрстку качественной и гибкой. Главное —
         начать им следовать. Со временем их соблюдение войдёт в привычку и вы начнёте сразу понимать, где можно
         допустить
         ошибку и как её избежать.
       </p>
     </div>
-  </body>
-</div>
-
+  </div>
+</body>
 
 </html>
