modified files: article.html, style.css, index.html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <img src="./img/logo-light.png" alt="Логотип">
     </a>
     <div class="link">
-      <a href="#">Modules</a>
-      <a href="article.html">Indents</a>
+      <a class="ref-link" href="#">Modules</a>
+      <a class="ref-link" href="article.html">Indents</a>
     </div>
     <a download href="skillbox.docx">Скачать программу</a>
   </div>
