--- a/article.html
+++ b/article.html
@@ -31,21 +31,21 @@
       <h2 class="h2">
         Содержание
       </h2>
-      <p class="par">
+      <p class="par-grey-block">
         Первая из частей - HTML. Это начальная стадия соблюдения кодстайла, ведь любой сайт вы начинаете писать именно с
         этого языка. Давайте посмотрим на основные правила:
       </p>
-      <ul class="ul">
-        <li class="li">
+      <ul class="ul-grey-block">
+        <li class="li-grey-block">
           <a href="#chapter1">Основные принципы работы с отступами</a>
         </li>
-        <li class="li">
+        <li class="li-grey-block">
           <a href="#chapter2">Первый принцип: отступы от предыдущего к следующему</a>
         </li>
-        <li class="li">
+        <li class="li-grey-block">
           <a href="#chapter3">Второй принцип: отступы задаются только между соседями</a>
         </li>
-        <li class="li">
+        <li class="li-grey-block">
           <a href="#chapter4">Третий принцип: у последнего элемента группы обнуляем отступ</a>
         </li>
       </ul>
@@ -75,8 +75,8 @@
         <b>margin-bottom</b>, то есть отступ справа и отступ снизу. Проще говоря - избегаем отступов слева и
         сверху полностью.
       </p>
-      <figure>
-        <img class="figure" src="img/1.jpg" alt="Картинка №1">
+      <figure class="figure">
+        <img src="img/1.jpg" alt="Картинка №1">
         <figcaption>
           На скриншоте видно, как правильно задавать отступы, — только справа и снизу (показано оранжевым)
         </figcaption>
@@ -107,8 +107,8 @@
         У обоих задан отступ снизу. Для первого списка это применимо, потому что есть сосед снизу — второй список. А для
         второго, не имеющего такого соседа, — отступа нет.
       </p>
-      <figure>
-        <img class="figure" src="img/4.jpg" alt="Картинка №4">
+      <figure class="figure">
+        <img src="img/4.jpg" alt="Картинка №4">
         <figcaption>
           На скриншоте — выпадение отступов. Отступ есть, но он не увеличивает размер «родителя» с голубым фоном,
           образуя
@@ -160,7 +160,7 @@
       <h2 class="h2">
         Итог
       </h2>
-      <p class="par">
+      <p class="par-grey-block">
         Это основные правила организации отступов, которые помогут вам сделать вёрстку качественной и гибкой. Главное —
         начать им следовать. Со временем их соблюдение войдёт в привычку и вы начнёте сразу понимать, где можно
         допустить
